--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -21,6 +21,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Fetch all history and tags for setuptools-scm
+          submodules: recursive  # Check out all submodules
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -30,6 +31,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install build
       - name: Build package
+        working-directory: .
+        env:
+          PYTHONPATH: ${{ github.workspace }}
         run: |
           python -m build
       - name: Publish package distributions to PyPI
