--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -22,6 +22,9 @@ jobs:
         with:
           fetch-depth: 0  # Fetch all history and tags for setuptools-scm
           submodules: recursive  # Check out all submodules
+      - name: Initialize and update submodules
+        run: |
+          git submodule update --init --recursive
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
